tests/suite/fail/generated/borrow/fail_move_send_data.ny
fn send(x: string) -> void { print(x) }
fn main() {
    let data = "hello"
    send(data)
    print(data) //~ ERROR was moved
}
